updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a project manager at a skin care company.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>New York, NY</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Reading books, running, tennis, traveling, food and wine</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software developer at a large tech corporation</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Upper East Side, Manhattan</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Web development sounds like a challenging and rewarding career where you have to be as much a problem solver as a creative person.</p>
     </section>
 
     <footer id="footer">
