--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       <h1>What are your favorite hobbies?</h1>
       <p>Reading books, running, tennis, traveling, food and wine</p>
       <h1>What's your dream job?</h1>
-      <p>Software developer at a large tech corporation</p>
+      <p>Software developer at a big tech company</p>
       <h1>Where do you live?</h1>
       <p>Upper East Side, Manhattan</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Web development sounds like a challenging and rewarding career where you have to be as much a problem solver as a creative person.</p>
+      <p>Web development sounds like a challenging and rewarding profession where you have to be as much a problem solver as a creative person.</p>
     </section>
 
     <footer id="footer">
