--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am a project manager at a skin care company.</p>
+      <p>I am a project manager at a skin care company in New Jersey.</p>
       <h1>Where I'm From</h1>
-      <p>New York, NY</p>
+      <p>New York, NY (Originally from Poland)</p>
       <h1>What are your favorite hobbies?</h1>
       <p>Reading books, running, tennis, traveling, food and wine</p>
       <h1>What's your dream job?</h1>
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>Upper East Side, Manhattan</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Web development sounds like a challenging and rewarding profession where you have to be as much a problem solver as a creative person.</p>
+      <p>Web development sounds like a challenging and rewarding profession. You have to be as much a problem solver as a creative person.</p>
     </section>
 
     <footer id="footer">
