--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h1>What's your dream job?</h1>
       <p>Software developer at a big tech company</p>
       <h1>Where do you live?</h1>
-      <p>Upper East Side, Manhattan</p>
+      <p>New York / New Jersey</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>Web development sounds like a challenging and rewarding profession.<br>
          You have to be as much a problem solver as a creative person.</p>
