--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="https://github.com/Piotr72us">My Github</a></li>
         </ul>
     </footer>
 </body>
